css/inventory.css
#shop{
    background-color:var(--shopBackground)
}

.inventory-title{
    font-weight:600;
    text-align:center;
}

.inventory-wrapper{
    margin:auto;
    width:875px;
    margin-top:1rem;
}

.inventory{
    background-color: var(--menuBack);
    color: var(--menuText);
    border:1px solid var(--border);
    width:300px;
    display:flex;
    flex-direction:column;
}

.inventory-list{
    /*width:600px;*/
    /*display:grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 0px;
    grid-auto-rows: 2rem;
    */
    padding-top:2px;
    height:68%;
    overflow:scroll;
    overflow-x: hidden;
    scrollbar-width: thin;
    scrollbar-color:var(--wall) #00000000;
    flex:1;
}

.inventory-slot{
    padding:4px;
    margin:0px 3px;
    height:31px;
    box-sizing: border-box;
    display:flex;
    background-color: var(--inventorySlot);
    /*background-image: linear-gradient(#ddcaa4,#c0aa73);*/
    border: 1px solid var(--inventoryBorder);
    /*border:1px solid gray*/

    .item-values{
        margin-left:5px;
    }
}

.inventory-between-div{
    height:3px;

    
}

.lastSlot{
        background-color: var(--highlight);
        height:10px;
    }


.inventory-slot:hover{
    cursor: pointer;
    background-color: var(--inventorySlotHover);
    /*background-image: linear-gradient(#ddcaa4,#aa9665);*/

}

/*
.inventory-slot{
    width:280px;
    height:120px;
    border:1px solid #BBBBBB;
    background-color: #ddd;
    color: #222;
}
*/

.item-name{
    font-weight:800;
    width:fit-content;
}

.item-buttons{
    margin-left:auto;
    width:fit-content;
    height:fit-content;
}

.item-description-header{
    display:flex; 
    margin-bottom: 1rem;
}

.item-gold-div{
    font-weight: 600;
    color: var(--darkOrange)
}


.equipped-true{
    .item-bulk-div{
        color: var(--lightBlue)
    }
}

.item-bulk-div{
    font-weight:600;
    color: var(--darkBlue)
}

.inventory-description-title{
    text-align:center;
    width:100%;
    flex:1;
    text-transform: capitalize;
}

.item-name:has(.proficiencySpan){
    line-height:0.5rem;
}

.trait-spans{
    font-weight: bolder;
    cursor: pointer;
}

.fresh-true{
    background-color: var(--shopFresh);
    border-color: var(--shopFreshBorder);
}

.primed-true>.item-name{
    /*background-color:var(--selectedSlot);*/
    text-decoration: underline;
}

.drop-true{
    background-color: var(--lightRed);
}

.drop-true:hover{
    background-color: var(--muteRed);
}

.selected-true{
    border: 2px solid black;
}

.inventory-description{
    padding:3px;
    /*outline:1px solid var(--border);*/
    border-bottom:1px solid var(--border);
    height:180px;
    text-align:left;
    background-color: var(--inventorySlotHover);
}

.inventory-description-body{
    height:80px;
    
}

.weapon-description{
    display:grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 0px;
    grid-auto-rows: 2rem;
    height:68px;
}

.item-stats-normal{
    height:fit-content;
}

.item-value{
    bottom:0px;
}

.item-title{
    font-weight:800;
}

.item-slot-number{
    padding-right:5px;
    /*border-right:1px solid black*/
}

#inventory{
    width:300px;
}

.available-false{
    background-color:var(--slotUnavailable);
}

.inventory-extras-div{
    padding:5px;
    display:flex;

    border-top:1px solid var(--border);

    background-color:var(--inventorySlotHover);

    div{
        margin:5px;
    }

    .drop-button-container{
        flex:1;
        width:fit-content;
        display:flex;

        button{
            margin:auto auto
        }
    }
    /*color: var(--altBackText);*/
}

.inventory.encumbered{
    .drop-true{
        /*background-color: var(--floor);*/
        /*outline:1px solid var(--tree);*/
    }
    .bulk-div{
        color: var(--red);
    }
}

.inventory-title-buttons{
    margin:5px;
}

.dragged-item{
    padding:4px;
    margin:3px;
    height:31px;
    box-sizing: border-box;
    background-color: var(--inventorySlot);
    /*background-image: linear-gradient(#ddcaa4,#c0aa73);*/
    border: 1px solid var(--inventoryBorder);
    font-weight:800;
    width:200px;
    /*border:1px solid gray*/
}

.tabs-container{
    display:flex;
}

.tabs-divs{
    flex:1;
    text-align:center;
    border:1px solid var(--border);
    border-top:none;
    background-color:var(--slotUnavailable);
    font-weight:600;
    text-transform: capitalize;
    cursor: pointer;
}

.tabs-divs.selected{
    background-color: var(--floor);
    border:none;
}

.bonus-damage-span{
    color:var(--green);
    padding-left:5px;
    font-weight:600;
    font-style: italic;
}

